@@ -1307,6 +1307,10 @@ namespace libtorrent
 		// set if there's an error on this torrent
 		error_code m_error;
 
+		// used if there is any resume data
+#error do we still need this?
+		boost::scoped_ptr<resume_data_t> m_resume_data;
+
 		// if the torrent is started without metadata, it may
 		// still be given a name until the metadata is received
 		// once the metadata is received this field will no
