@@ -1,3 +1,4 @@
+	* removed deprecated fields from add_torrent_params
 	* improve DHT performance when changing external IP (primarily affects
 	  bootstrapping).
 	* add feature to stop torrents immediately after checking files is done
